fixed: scrollbar  footer responsiv

--- a/src/app/main/content/content.component.scss
+++ b/src/app/main/content/content.component.scss
@@ -3,7 +3,8 @@
 section {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-start;  
+  justify-content: flex-start; 
+  
 }
 
 div {
@@ -24,7 +25,7 @@ app-help {
 app-policy,
 app-imprint,
 app-help {
-  max-height: calc(100vh - 88px);
+  max-height: calc(100vh - 91px);
   overflow-y: auto;
 
   box-shadow: 0px 4px 6px 0px rgba($black, 0.1) inset;
@@ -38,11 +39,15 @@ app-help {
   section {
     display: flex;
     flex-direction: column;
-    justify-content: center;    
+    justify-content: center; 
+    // max-height: calc(100vh - 91px - 80px);
   }
 
-  div{
-    margin-bottom: 80px;
-  }
+  app-policy,
+app-imprint,
+app-help {
+  max-height: calc(100vh - 91px - 80px);
+  
+}
   
 }
