--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,20 @@ body {
 a {
   cursor: pointer;
 }
+
+
+/* Scrollbar Styling */
+::-webkit-scrollbar {
+  width: 8px;
+
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #A8A8A8;
+  border-radius: 4px;
+}
